src/test/ui/nll/user-annotations/constant-in-expr-inherent-2.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/constant-in-expr-inherent-2.rs:25:9
   |
LL |     FUN(&x);
   |     ----^^-
   |     |   |
   |     |   borrowed value does not live long enough
   |     argument requires that `x` is borrowed for `'static`
...
LL | }
   | - `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
